--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
-* { box-sizing: border-box; align-items: center; text-decoration: none; }
+* { box-sizing: border-box; align-items: center; color: inherit; }
 
 @font-face { font-family: A; src: local('SAX2'), url(SAX2.ttf) }
+@font-face { font-family: Z; src: local('APL333'), url(apl333.ttf) }
 
 code,input,pre { font-family: A; white-space: pre }
 
-body { background:#ddd; text-align: center; font-family: sans-serif }
+body { background:#ddd; text-align: center; font-family: Z }
 
 .container { display: flex; flex-direction: row; justify-content: center; width: 100%; margin: 0;  }
 
@@ -13,7 +14,7 @@ input,.o { flex: 1; padding: 8px; overflow-wrap: break-word; resize: none; text-
 .o { background: #eee; white-space: pre-wrap; }
 
 .container { margin-top: 1.618em; align-items: center; }
-
+a{font-weight: bold;}
 main, input { max-width: 34em; margin: 0 auto; font-size: 21px; font-weight: 600; }
 
 .container label { min-width: 5em; overflow: auto; text-align: right; padding-right: 0.618ex; }
@@ -21,6 +22,7 @@ main, input { max-width: 34em; margin: 0 auto; font-size: 21px; font-weight: 600
 
 @media (prefers-color-scheme: dark) {html{ filter: invert(1) hue-rotate(180deg); }}
 
-.circle { height: 1.2em; border-radius: 1em; border: .25ex solid currentcolor;
+.circle { height: 1.2em; border-radius: 1em; border: .25ex solid currentcolor; text-decoration: none;
 width: 1.2em; line-height: 1em; place-self: center; display: inline-block; text-align: center; color: unset; 
 margin: .2em; }
+footer{ color: #666; position : absolute; bottom : 0; padding: 1.618ex;}
