--- a/index.css
+++ b/index.css
@@ -3,26 +3,42 @@
 @font-face { font-family: A; src: local('SAX2'), url(SAX2.ttf) }
 @font-face { font-family: Z; src: local('APL333'), url(apl333.ttf) }
 
-code,input,pre { font-family: A; white-space: pre }
+code,input,pre { white-space: pre }
 
 body { background:#ddd; text-align: center; font-family: Z }
 
-.container { display: flex; flex-direction: row; justify-content: center; width: 100%; margin: 0;  }
+input,.output { flex: 1; padding: 8px; overflow-wrap: break-word; resize: none; text-align: left; margin: auto; }
+main,input { font-size: 21px; font-weight: 600; }
 
-input,.o { flex: 1; padding: 8px; overflow-wrap: break-word; resize: none; text-align: left; margin:auto; }
+.output,.circle { background: #eee; white-space: pre-wrap; }
 
-.o { background: #eee; white-space: pre-wrap; }
-
-.container { margin-top: 1.618em; align-items: center; }
 a{font-weight: bold;}
-main, input { max-width: 34em; margin: 0 auto; font-size: 21px; font-weight: 600; }
-
-.container label { min-width: 5em; overflow: auto; text-align: right; padding-right: 0.618ex; }
-.container pre { display: inline-block; }
 
 @media (prefers-color-scheme: dark) {html{ filter: invert(1) hue-rotate(180deg); }}
 
 .circle { height: 1.2em; border-radius: 1em; border: .25ex solid currentcolor; text-decoration: none;
-width: 1.2em; line-height: 1em; place-self: center; display: inline-block; text-align: center; color: unset; 
-margin: .2em; }
+width: 1.2em; line-height: 1em; place-self: center; display: inline-block; text-align: center; color: unset; margin: .2em; }
+
 footer{ color: #666; position : absolute; bottom : 0; padding: 1.618ex;}
+
+.pane { flex-grow: 1; display: flex; flex-direction: column; }
+
+section, .container, .split{ display: flex; justify-content: center; flex-direction: row; }
+
+section, .container { width: 100%; margin: 0; padding: 0; align-items: center; }
+
+section { flex-direction: column; max-width: 35em; }
+
+.container { margin: .618em;}
+.container label { min-width: 5em; overflow: auto; text-align: right; padding-right: 0.618ex; }
+.container pre { display: inline-block; }
+.container * { font-family: A; }
+
+
+#isSplit:checked~#V2{
+    display: inherit !important;
+}
+
+#V1,#V2{ border: 2px solid #fff; padding-left: 1em; padding-right: 1em;  margin: .618em;}
+
+.gutter { display: none; }
